--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8090
-spring.data.mongodb.uri=mongodb://pranaysaha:ecomm123@ds121636.mlab.com:21636/ecomm
+spring.data.mongodb.uri=mongodb_url
